# betterFANN

./: .gitignore  CODE_OF_CONDUCT.MD  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  execution_dag.json  progress.json  pyproject.toml  verified_flaw_manifest.json
betterfann/: __init__.py
cognitive-namespace/: Chart.yaml  values.yaml
cognitive-namespace/templates/: limit-range.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  resource-quota.yaml
cognitive_fabric/: package-lock.json  package.json
cognitive_fabric/src/: index.ts
cognitive_fabric/tests/: index.test.ts
cognitive_pattern_gan/: pyproject.toml
cognitive_pattern_gan/benches/: bench_gan.py
cognitive_pattern_gan/cognitive_pattern_gan/: __init__.py  gan.py  patterns.py
cognitive_pattern_gan/tests/: test_gan.py
configmesh/: configmesh.go  configmesh_bench_test.go  configmesh_test.go  go.mod
configmesh/internal/consensus/: node.go
configmesh/internal/store/: store.go
dist-archive/: betterfann-1.0.0-py3-none-any.whl
eloptic_classifier/: Cargo.toml
eloptic_classifier/benches/: classifier_bench.rs
eloptic_classifier/src/: activation.rs  classifier.rs  layer.rs  lib.rs  weights.rs
eloptic_classifier/tests/: integration_test.rs
ephemeral_lifecycle/: Cargo.toml  README.md
ephemeral_lifecycle/src/: ephemeral_net.rs  lib.rs  secure_matrix.rs
ephemeral_lifecycle/tests/: integration_test.rs
model_router/: package-lock.json  package.json  tsconfig.json
model_router/src/: index.ts
model_router/tests/: index.test.ts
nexgen-neural-wasm/: Cargo.toml  README.md
nexgen-neural-wasm/src/: inference.rs  lib.rs
nexgen-neural-wasm/tests/: integration_test.rs
nexgen-neural-wasm/wit/: neural.wit
our_neural_core/: Cargo.toml  README.md
our_neural_core/benches/: network_bench.rs
our_neural_core/src/: activation.rs  layer.rs  lib.rs  network.rs
our_neural_core/tests/: integration_test.rs
pq_transport/: Cargo.toml  README.md
pq_transport/src/: channel.rs  kem.rs  lib.rs  sign.rs
pq_transport/tests/: integration_test.rs
sphere_node/: Cargo.toml
sphere_node/benches/: crdt_bench.rs
sphere_node/src/: crdt.rs  gossip.rs  lib.rs  node.rs
sphere_node/tests/: integration_test.rs
src/: lib.rs
topology_synthesizer/: Cargo.toml  README.md
topology_synthesizer/src/: lib.rs  objectives.rs  pareto.rs  synthesizer.rs
topology_synthesizer/tests/: integration_test.rs
vortex_router/: Cargo.toml
vortex_router/src/: lib.rs  telemetry.rs  thermal_node.rs  vortex_pool.rs
