[package]
name = "our-neural-core"
version = "0.1.0"
edition = "2021"
description = "MODULE 1 — NeuralCore: centripetal inference engine with secure weight storage"
license = "MIT"

[dependencies]
ndarray = "0.15"
tokio = { version = "1", features = ["full"] }
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"
rand = "0.8"

[dev-dependencies]
ndarray = "0.15"
zeroize = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "network_bench"
harness = false
