[package]
name = "sphere_node"
version = "0.1.0"
edition = "2021"
description = "Distributed neural-network node with CRDT weight synchronisation and gossip protocol"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crdt_bench"
harness = false
